# ai-model-recommendation-agent-databricks

./: .databricksignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.yaml  databricks.yml  pyproject.toml
.vite/vitest/: results.json
docs/superpowers/plans/: 2026-07-09-rag-agent.md  2026-07-10-landing-page.md
docs/superpowers/specs/: 2026-07-09-rag-agent-design.md  2026-07-10-landing-page-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ErrorBanner.tsx  ProviderFilter.tsx  RecommendationCard.tsx  Sidebar.tsx
frontend/src/components/landing/: FooterCTA.tsx  HeroSection.tsx  HowItWorksSection.tsx  ProblemSection.tsx  SystemDiagram.tsx  WhySection.tsx
frontend/src/hooks/: useChat.ts  useCountUp.ts  useSessions.ts
frontend/src/pages/: ChatPage.tsx  LandingPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
jobs/ingestion/: ingest.py
services/backend/app/: chat.py  main.py  retrieval.py
tests/backend/: test_chat.py  test_ingestion.py  test_retrieval.py
tests/frontend/: landing.test.tsx  useChat.test.ts
