[project]
name = "rag-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "databricks-sdk>=0.33.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
asyncio_mode = "auto"
pythonpath = [".", "services/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
